<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="30dp"
              android:orientation="vertical"
              android:gravity="center"
              tools:context="com.thomaskioko.hellodroid.app.LoginActivity">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_user_name"
            style="@style/TextView"/>

    <EditText
            android:id="@+id/et_login_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_admin"
            style="@style/EditText"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            style="@style/TextView"/>

    <EditText
            android:id="@+id/et_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            style="@style/EditText"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_styles"
            android:layout_marginTop="10dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>


</LinearLayout>
